# pinta-mcp-agent

./: .gitignore  README.md  gemini_mcp_agent.py  gmail logs  output.txt  pinta logs  pinta_mcp_server.py  pyproject.toml
